Fix overflow on modals

--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -10,7 +10,7 @@
     margin: 0 auto;
     padding: 0;
     width: 500px;
-    overflow: auto;
+    overflow: visible;
 
     // Ugly things go here:
 
@@ -20,6 +20,7 @@
     margin-left: auto !important;
 
     .inner-wrapper {
+        overflow: visible;
         background: none;
         background-color: @gg-grey;
         border: 1px solid fadeout(@black, 20%);
